feat(products): added secured handler "products"
