# main.go
@@ -8,6 +8,8 @@ import (
 	config "koka_style/config"
 	database "koka_style/database"
 	handler "koka_style/handlers"
+	auth "koka_style/handlers/auth"
+
 	middleware "koka_style/middlewares"
 
 	_ "koka_style/docs"
@@ -22,14 +24,17 @@ func main() {
 		panic("Failed to connect to the database")
 	}
 
-	router := gin.Default()
+	router := gin.New()
+	router.Use(gin.Logger())
+	router.Use(gin.Recovery())
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	router.GET("/", handler.Root(db))
 
-	router.POST("/sign_up", handler.SignUp(db))
-	router.POST("/login", handler.Login(db))
+	router.POST("/sign_up", auth.SignUp(db))
+	router.POST("/login", auth.Login(db))
+	router.POST("/logout", auth.Logout(db))
 
 	router.GET("/products", middleware.AuthMiddleware(), handler.GetProducts(db))
 
